# HeadHunter

./: .gitignore  AGENTS.md  README.md  alembic.ini  analyze_jobs_ollama.py  browser.py  dashboard.py  discover_job_boards.py  email_job_digest.py  pyproject.toml  requirements.txt  run.py  steps.json.example  swipe.py  test-ollama.py
app/: compensation.py  config.py  db.py  json_writer.py  models.py  scraper.py  utils.py
prompts/: compensation_system.txt  conform.txt  job_discovery_criteria_system.txt  job_discovery_triage_system.txt  job_match_system.txt
templates/: index.html  steps.html  swipe.html
