[project]
name = "jobs-pipeline"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  # Keep this list in sync with requirements.txt; avoid open ranges for this app.
  "SQLAlchemy==2.0.46",
  "PyMySQL==1.1.2",
  "alembic==1.18.4",
  "nltk==3.9.4",
  "beautifulsoup4==4.14.3",
  "selenium==4.44.0",
  "pytest==9.0.3",
  "Flask==3.1.3",
  "gunicorn==26.0.0",
  "tzdata==2026.2",
  "langchain-ollama==1.1.0",
  "langchain-core==1.4.0",
  # Provides dotenv.load_dotenv; do not replace with the deprecated dotenv package.
  "python-dotenv==1.2.2"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
